# Offshore-Wind-Research-2024-2025

./: .gitignore  LICENSE  README.md  environment.yml  et --soft 25da3e7  pyproject.toml  requirements.txt  test_02202025.txt
docs/: mkdocs.yml
docs/docs/: Data-Loader.md  getting-started.md  index.md  sar_wind_plot.md
models/: autoencoder_model.pt
notebooks/: 7.Proposed workflow_02272025.ipynb
notebooks/data_exploration/: 1.Tabular_analysis_11072024.ipynb  4.ERA5_reanalysis_dataset.ipynb  5.Buoy_data.ipynb  LSTM_11012024.ipynb  Numpy_arrays_Unsupervised_ML-Copy1.ipynb  Numpy_arrays_Unsupervised_ML.ipynb  Tabular_analysis_11072024.ipynb  Unsupervised_test.ipynb  Untitled.ipynb  Untitled1.ipynb  feature_extraction.ipynb  turbines_map.html
notebooks/data_export/: CCNM_Sentinel-1 OWI product.ipynb
notebooks/data_processing/: read_and_extract_nc_to_arrays.ipynb
notebooks/jersey_atlantic_wind_farm/: 6.Jersey-atlantic_data.ipynb  6.Unsupervised_ML_Jersey-atlantic.ipynb  ANN.ipynb  GCN_plus_GRU.pth  Graph_neruonal_network.ipynb  turbines_map.html
offshore_wind_nj/: __init__.py  config.py  convert_to_raster.py  convolutional_autoencoder.py  custom_image_dataset.py  data_cleaning.py  data_loader.py  data_processing.py  dataset.py  features.py  linear_autoencoder.py  plots.py  sar_wind_plot.py
offshore_wind_nj/modeling/: predict.py  train.py
scripts/data_exploration/: Numpy_arrays_Unsupervised_ML.ipynb
scripts/data_export/: CCNM_Sentinel-1 OWI product.ipynb
scripts/data_processing/: read_and_extract_nc_to_arrays.ipynb
